--- a/css/main.css
+++ b/css/main.css
@@ -29,13 +29,13 @@ a:hover {
   color: #fff;
 }
 
-.nav {
+.nav, nav:focus {
   position: relative;
   background-color: #113c00;
   z-index: 2;
 }
 
-.nav a {
+.nav a, .nav a:focus {
   display: inline-block;
   padding: .5rem .75rem;
 
