--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ a:hover {
   color: #fff;
 }
 
-.nav, nav:focus {
+.nav, .nav:focus {
   position: relative;
   background-color: #113c00;
   z-index: 2;
